--- a/assignment3/part2/style.css
+++ b/assignment3/part2/style.css
@@ -3,3 +3,11 @@ html {
 }
 
 /* Your CSS below here */
+div {
+  width: 150px;
+  height: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  
+}
