--- a/assignment3/part2/style.css
+++ b/assignment3/part2/style.css
@@ -4,10 +4,15 @@ html {
 
 /* Your CSS below here */
 div {
-  width: 150px;
-  height: 200px;
+  width: 400px;
+  height: 350px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  
+  font-size: 1.5rem;
+  background-color: #ff5555;
+  border-radius: 25px;
+  border: 1px solid #aa3838;
+  background-image: linear-gradient(150deg, #ff5555 0% 30%, #000000 );
+  box-shadow: 5px 5px 5px #666666;
 }
