--- a/assignment3/part2/style.css
+++ b/assignment3/part2/style.css
@@ -8,8 +8,11 @@ div {
   height: 350px;
   margin-left: auto;
   margin-right: auto;
+  line-height: 320px;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 2rem;
+  color: #ffffff;
+  text-shadow: 3px 3px 3px #000000;
   background-color: #ff5555;
   border-radius: 25px;
   border: 1px solid #aa3838;
