--- a/assignment3/part2/style.css
+++ b/assignment3/part2/style.css
@@ -13,9 +13,10 @@ div {
   font-size: 2rem;
   color: #ffffff;
   text-shadow: 3px 3px 3px #000000;
-  background-color: #ff5555;
+  background-color: #ff3a3a;
   border-radius: 25px;
-  border: 1px solid #aa3838;
-  background-image: linear-gradient(150deg, #ff5555 0% 30%, #000000 );
-  box-shadow: 5px 5px 5px #666666;
+  border: 2px solid #701414;
+  background-image: linear-gradient(135deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.2) 30%, rgba(0,0,0,0.2) 100%);
+  box-shadow: inset 5px 5px 5px rgba(255, 255, 255, 0.5), inset -5px -5px 5px rgba(0, 0, 0, 0.4);
+  
 }
